Implemented Like delegate UI

--- a/Web/app/partials/home.html
+++ b/Web/app/partials/home.html
@@ -47,11 +47,11 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <h2>Profiles</h2>
+                <h2>Delegate lists</h2>
                 <div class="thumbnail">
                     <img src="img/Attendees_Thumbnail.jpg" style="margin-top:5px" class="img-rounded">
                     <div class="caption">
-                        <p>Create your own yieldto.me Profile- share contact details, or, stay behind your delegate persona. Keep in touch with everyone after the conference too</p>
+                        <p>Create your own delegate Profile and share contact details, or, stay behind your delegate persona. Like other delegates- and find out if they like you too</p>
                     </div>
                 </div>
             </div>
@@ -70,8 +70,8 @@
         <accordion-group heading="What features will you add next?">
           That is partly up to you. We have lots of ideas and you can influence the priority by voting on our <a href="https://yieldtome.uservoice.com"  target="_blank">feature request site</a>. Some of the ideas on the list are:
           <ul>
-            <li>The ability to wink at another delegate, and get a wink back. Good for after-dark lobbying</li>
             <li>Delegate to delegate instant messaging</li>
+            <li>Add delegates to an Event in bulk. A time saver for event organisers</li>
             <li>Keyboard shortcuts - for power users with a keyboard</li>
             <li>iPhone and Android Apps</li>
             <li>Help overlays to assist first time users</li>
