--- a/Web/app/partials/profile/viewProfile.html
+++ b/Web/app/partials/profile/viewProfile.html
@@ -10,6 +10,7 @@
         </div>
         <div class="col-sm-9">
             <div class="well" ng-hide="profile.IsEmailPublic || profile.IsPhonePublic || profile.IsTwitterPublic || profile.IsLinkedInPublic">{{profile.Name}} is not sharing any contact details with you</div>
+            <div class="alert alert-success" role="alert" ng-show="isLikeRequited">{{profile.Name}} likes you too!</div>
             <div class="form-group"  ng-show="profile.Email && profile.IsEmailPublic">
                 <div class="input-group">
                     <span class="input-group-addon" style="min-width:65px">email</span>
@@ -44,6 +45,7 @@
             </div>
             <div class="row">
                 <div class="text-right">
+                    <button type="button" ng-click="likeProfile()" class="btn btn-default" ng-hide="doesLikeExist"><span class="glyphicon glyphicon-heart"></span> Like</button>
                     <button type="button" ng-click="$back()" class="btn btn-default">{{alternatebutton}}</button>
                     <button type="submit" ng-disabled="form.$invalid" ng-hide="formDisabled" ng-click="save()" class="btn btn-primary">Save</button>
                 </div>
