Changed Home page and removed async index

--- a/Web/app/partials/home.html
+++ b/Web/app/partials/home.html
@@ -4,7 +4,8 @@
     </div>
     <div class="jumbotron">
         <p>
-            Helps delegates and organisers with the boring details of Model UNs. Add yourself to a Speakers List or Vote during a Model UN using your phone, tablet or PC. Everyone spends less time on the rules and more time on the debate
+            Helps delegates and organisers with the boring details of Model UNs. Add yourself to a Speakers List or Vote during a Model UN using your phone, tablet or PC. <br>
+            Everyone spends less time on the rules and more time on the debate
         </p>
         <button type="button" id="loginButton" class="btn btn-primary btn-lg" ng-click="login()">Get started</button>
     </div>
@@ -29,7 +30,7 @@
         </div>
         <div class="col-md-9">
             <div class="col-md-4">
-                <h2>Speakers Lists</h2>
+                <h2>Speak</h2>
                 <div class="thumbnail">
                     <img src="img/Speakers_Thumbnail.jpg" style="margin-top:5px" class="img-rounded">
                     <div class="caption">
@@ -38,7 +39,7 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <h2>Voting</h2>
+                <h2>Vote</h2>
                 <div class="thumbnail">
                     <img src="img/Votes_Thumbnail.jpg" style="margin-top:5px" class="img-rounded">
                     <div class="caption">
@@ -47,11 +48,11 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <h2>Delegate lists</h2>
+                <h2>Interact</h2>
                 <div class="thumbnail">
                     <img src="img/Attendees_Thumbnail.jpg" style="margin-top:5px" class="img-rounded">
                     <div class="caption">
-                        <p>Create your own delegate Profile and share contact details, or, stay behind your delegate persona. Like other delegates- and find out if they like you too</p>
+                        <p>Create your own delegate Profile and share contact details. See the contact details that other delegates have shared. Like other delegates- and find out if they like you too</p>
                     </div>
                 </div>
             </div>
@@ -66,6 +67,9 @@
         <accordion-group heading="Can I use yieldto.me without a Facebook account?">
           So you don't need to remember yet another username and password we are taking advantage of Facebook's login capabilities. yieldto.me won't have the ability to post on your wall or anything like that. We will just record your Facebook user ID and email address so we can make sure we remember you. 
           Unfortunately, if you don't have Facebook- you can't use yieldto.me at this stage. But, you can vote to support other login mechanisms on our <a href="https://yieldtome.uservoice.com"  target="_blank">feature request site</a>
+        </accordion-group>
+        <accordion-group heading="If I 'Like' another delegate, do they get notified?">
+          Only if they also 'Like' you too. In which case you will both be able to see that you like each other when viewing each other's Profile. So, in that sense, it's like Tinder. But, for Model UNs.
         </accordion-group>
         <accordion-group heading="What features will you add next?">
           That is partly up to you. We have lots of ideas and you can influence the priority by voting on our <a href="https://yieldtome.uservoice.com"  target="_blank">feature request site</a>. Some of the ideas on the list are:
