--- a/Web/app/partials/speakersList/attendee.html
+++ b/Web/app/partials/speakersList/attendee.html
@@ -14,6 +14,7 @@
             <!-- Names -->
             <h4 class="media-heading">{{attendee.Name}}</h4>
             {{attendee.Profile.Name}}
+            <div style="height:5px"></div>
         </div>
     </div>
     <!-- Add speaker controls -->
