Set the foundations to allow Twitter, G+ and LinkedIn auth

--- a/Web/app/partials/menus/menu.html
+++ b/Web/app/partials/menus/menu.html
@@ -18,7 +18,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#/events" ng-show="event">Other Events</a></li>                
                 <li><a href="#/editProfile" ng-show="profile.ProfileID">Your Profile</a></li>
-                <li><a href="#/?logout" ng-show="profile">Logout</a></li>
+                <li><a href="#/logout" ng-show="profile">Logout</a></li>
             </ul>
         </div>
     </div>
