Implemented Google sign in in addition to Facebook

--- a/Web/app/partials/home.html
+++ b/Web/app/partials/home.html
@@ -7,7 +7,7 @@
             Helps delegates and organisers with the boring details of Model UNs. Add yourself to a Speakers List or Vote during a Model UN using your phone, tablet or PC. <br>
             Everyone spends less time on the rules and more time on the debate
         </p>
-        <button type="button" id="loginButton" class="btn btn-primary btn-lg" ng-click="login()">Get started</button>
+        <button type="button" id="loginButton" class="btn btn-primary btn-lg" ng-click="showLogin()">Get started</button>
     </div>
     <!-- Features -->
     <div class="row" style="margin-top:-20px">
