--- a/Web/app/partials/attendee/attendee.html
+++ b/Web/app/partials/attendee/attendee.html
@@ -1,7 +1,7 @@
 <div class="media">
     <!-- Profile picture -->
     <img class="media-object pull-left" ng-src="img/profile.jpg" ng-hide="attendee.Profile" style="width:50px;height:50px" >
-    <img class="media-object pull-left" ng-src="{{attendee.Profile.ProfilePictureUri}}" ng-click="showProfile(attendee.Profile.ProfileID)">
+    <img class="media-object pull-left" ng-src="{{attendee.Profile.ProfilePictureUri}}"  ng-show="attendee.Profile" style="width:50px;height:50px" ng-click="showProfile(attendee.Profile.ProfileID)">
     <div class="media-body">
         <!-- Edit attendee button -->
         <button class="btn btn-default pull-right" ng-click="editAttendee(attendee.AttendeeID)" ng-show="isCreator || attendee.Profile.ProfileID == profile.ProfileID">
