--- a/Web/app/partials/home.html
+++ b/Web/app/partials/home.html
@@ -64,9 +64,9 @@
         <accordion-group heading="Do all an event's delegates need to sign in to yieldto.me?">
           No. The event organiser can manually add delegates who aren't using yieldto.me. They can then add them as Speakers on Speakers lists and cast Votes on their behalf- just as you would have done without yieldto.me
         </accordion-group>
-        <accordion-group heading="Can I use yieldto.me without a Facebook account?">
-          So you don't need to remember yet another username and password we are taking advantage of Facebook's login capabilities. yieldto.me won't have the ability to post on your wall or anything like that. We will just record your Facebook user ID and email address so we can make sure we remember you. 
-          Unfortunately, if you don't have Facebook- you can't use yieldto.me at this stage. But, you can vote to support other login mechanisms on our <a href="https://yieldtome.uservoice.com"  target="_blank">feature request site</a>
+        <accordion-group heading="Can I use yieldto.me without a Facebook or Google+ account?">
+          So you don't need to remember yet another username and password we are taking advantage of Facebook and Google's login capabilities. yieldto.me won't have the ability to post on your wall or anything like that. We just record your Facebook or Google user ID and email address so we can remember you. 
+          Unfortunately, if you don't have Facebook or Google- you can't use yieldto.me at this stage. But, we are looking to add LinkedIn login support soon. If you want you can vote to support other login mechanisms on our <a href="https://yieldtome.uservoice.com"  target="_blank">feature request site</a>
         </accordion-group>
         <accordion-group heading="If I 'Like' another delegate, do they get notified?">
           Only if they also 'Like' you too. In which case you will both be able to see that you like each other when viewing each other's Profile. So, in that sense, it's like Tinder. But, for Model UNs.
