--- a/Web/app/partials/profile/editProfile.html
+++ b/Web/app/partials/profile/editProfile.html
@@ -6,7 +6,7 @@
     </h2>
     <form name="form" role="form" class="css-form form-horizontal" novalidate>
         <div class="col-sm-3 hidden-xs">
-            <img ng-src="{{profile.ProfilePictureUri}}" class="img-responsive img-rounded" style="width:150px;height:150px"/>
+            <img ng-src="{{profile.ProfilePictureUri}}" class="img-responsive img-rounded"/>
         </div>
         <div class="col-sm-9">
             <div class="form-group">
