--- a/Web/app/partials/profile/viewProfile.html
+++ b/Web/app/partials/profile/viewProfile.html
@@ -6,7 +6,7 @@
     </h2>
     <form name="form" role="form" class="css-form form-horizontal" novalidate>
         <div class="col-sm-3 hidden-xs">
-            <a href="{{profile.DefaultContactUri}}" target="_blank"><img ng-src="{{profile.ProfilePictureUri}}" class="img-responsive img-rounded"  style="width:150px;height:150px"/></a>
+            <a href="{{profile.DefaultContactUri}}" target="_blank"><img ng-src="{{profile.ProfilePictureUri}}" class="img-responsive img-rounded"/></a>
         </div>
         <div class="col-sm-9">
             <div class="well" ng-hide="profile.IsEmailPublic || profile.IsPhonePublic || profile.IsTwitterPublic">{{profile.Name}} is not sharing any contact details with you</div>
