--- a/Web/app/partials/speakersList/listSpeakers.html
+++ b/Web/app/partials/speakersList/listSpeakers.html
@@ -59,16 +59,17 @@
         </div>
         <div class="well" ng-show="speakers.length == 0">There is not yet any Speakers on this Speakers list</div>
         <div class="row" ng-show="speakers.length > 0">
+            <!-- Next speaker -->
             <div class="col-md-3 hidden-sm hidden-xs">
                 <h3>Next Speaker</h3>
                 <div class="thumbnail">
                     <div ng-show="speakers[0].Attendee.Profile">
                         <a href="{{speakers[0].Attendee.Profile.DefaultContactUri}}" target="_blank">
-                            <img ng-src="{{speakers[0].Attendee.Profile.ProfilePictureUri}}" class="img-responsive img-rounded" />
+                            <img ng-src="{{speakers[0].Attendee.Profile.ProfilePictureUri}}" class="img-responsive img-rounded" style="margin-top:5px" />
                         </a>
                     </div>
                     <div ng-hide="speakers[0].Attendee.Profile">
-                        <img ng-src="img/profile.jpg" class="img-responsive img-rounded" />
+                        <img ng-src="img/profile.jpg" class="img-responsive img-rounded" style="margin-top:5px" />
                     </div>
                     <div class="caption">
                         <h4 class="media-heading">{{speakers[0].Attendee.Name}}</h4>
@@ -84,6 +85,7 @@
                     </div>
                 </div>
             </div>
+            <!-- Speakers list -->
             <div class="col-md-9">
                 <!-- Non editable -->
                 <div style="margin-top:10px">
